Shift placeholder to avoid cursor colision

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -20,6 +20,11 @@
   padding: var(--input-padding);
 }
 
+.input::placeholder {
+  position: relative;
+  left: 1px;
+}
+
 ul.suggestionsList {
   list-style: none;
   margin: 0;
